[package]
name = "rl2tp"
version = "0.1.0"
authors = ["Kim Nilsson <kim@wayoftao.net>"]
license = "MIT"
homepage = "https://github.com/nilssonk/rl2tp"
repository = "https://github.com/nilssonk/rl2tp"
edition = "2021"

[features]
fail-on-warnings = []

[dependencies]
md5 = "0.7"
num_enum = "0.5"
phf = {version = "0.10", features=["macros"]}
