[package]
name = "rl2tp"
version = "1.0.0"
description = "A Rust implementation of the L2TP protocol."
authors = ["Kim Nilsson <kim@wayoftao.net>"]
license = "MIT"
homepage = "https://github.com/nilssonk/rl2tp"
repository = "https://github.com/nilssonk/rl2tp"
edition = "2021"
autobenches = false

[features]
benchmarks = ["dep:criterion", "dep:once_cell", "dep:rand"]
fail-on-warnings = []

[dependencies]
enum_dispatch = "0.3"
md5 = "0.7"
num_enum = "0.7"
phf = { version = "0.11", features = ["macros"] }
# feature benchmarks
criterion = { version = "0.5", optional = true }
once_cell = { version = "1.10", optional = true }
rand = { version = "0.8", optional = true, features = ["small_rng"] }
thiserror = "2"

[[bench]]
name = "avp"
harness = false
